--- a/theme.conf
+++ b/theme.conf
@@ -1,34 +1,81 @@
-#ICON
+#############################################################
+# INSTRUCTIONS
+#------------------------------------------------------------
+# Lines beginning with # are considered comments.
+# The available options for each section are provided below.
+# To change the active option, uncomment it and comment
+#   out the previously active option.
+##############################################################
+
+### ICONS
 
 icons_dir themes/rEFInd-tokyo-night/icons/384-144
 
-#ICON SIZE
+
+### ICON SIZE
 
 big_icon_size 384
 small_icon_size 144
 
-#BACKGROUND IMAGE
 
-#banner themes/rEFInd-tokyo-night/wallpaper/tokyo-blur.jpg
+### WALLPAPER
+
+# Tokyo Aesthetic (choose the appropriate aspect ratio for your monitor)
+#banner themes/rEFInd-tokyo-night/wallpaper/tokyo-blur-16-9.png
+#banner themes/rEFInd-tokyo-night/wallpaper/tokyo-blur-16-10.png
+#banner themes/rEFInd-tokyo-night/wallpaper/tokyo-blur-21-9.png
+
+# Solid color
 banner themes/rEFInd-tokyo-night/wallpaper/tokyo-night.png
 #banner themes/rEFInd-tokyo-night/wallpaper/tokyo-storm.png
 
-#SELECTION IMAGE
+# Make sure the Tokyo Aesthetic wallpaper fills the screen regardless of monitor resolution
+banner_scale fillscreen
 
-# BIG
+
+### SELECTION IMAGE BIG
+
 #selection_big themes/rEFInd-tokyo-night/icons/384-144/selection-big-circle.png
 #selection_big themes/rEFInd-tokyo-night/icons/384-144/selection-big-line.png
 selection_big themes/rEFInd-tokyo-night/icons/384-144/selection-big-night-square.png
 #selection_big themes/rEFInd-tokyo-night/icons/384-144/selection-big-storm-square1.png
 #selection_big themes/rEFInd-tokyo-night/icons/384-144/selection-big-storm-square2.png
 
-# SMALL
+
+### SELECTION IMAGE SMALL
 #selection_small themes/rEFInd-tokyo-night/icons/384-144/selection-small-circle.png
 #selection_small themes/rEFInd-tokyo-night/icons/384-144/selection-small-line.png
 selection_small themes/rEFInd-tokyo-night/icons/384-144/selection-small-night-square.png
 #selection_small themes/rEFInd-tokyo-night/icons/384-144/selection-small-storm-square1.png
 #selection_small themes/rEFInd-tokyo-night/icons/384-144/selection-small-storm-square2.png
 
-#FONT
 
+### FONT
+
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-14.png
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-16.png
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-18.png
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-28.png
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-30.png
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-32.png
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-42.png
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-44.png
+#font themes/rEFInd-tokyo-night/fonts/nimbus-mono-46.png
+#font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-14.png
 font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-16.png
+#font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-18.png
+#font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-28.png
+#font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-30.png
+#font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-32.png
+#font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-42.png
+#font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-44.png
+#font themes/rEFInd-tokyo-night/fonts/source-code-pro-extralight-46.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-14.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-16.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-18.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-28.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-30.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-32.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-42.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-44.png
+#font themes/rEFInd-tokyo-night/fonts/ubuntu-mono-46.png
